# convopt

./: Cargo.toml  README.md
docs/: ToDo.txt  log.txt
docs/LaTeX/: PD.tex  PD_0.tex  PD_1.tex  PD_2.tex
examples/: cholesky_solve_example.rs  golden_search_example.rs  maxent_example.rs  qr_solve_example.rs  rosenbrook_example.rs
src/: equation.rs  lib.rs
src/error/: mod.rs
src/logging/: mod.rs
src/matrix_utils/: mod.rs
src/optimization/: constraint.rs  convex.rs  linesearch.rs  min_problem.rs  mod.rs  newton.rs  solve.rs
src/test_problems/: mod.rs
tests/: equation_tests.rs
